Removed dashboard css class

--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,10 @@ code {
   width: 100px;
 }
 
-.dashboard {
+/* .dashboard {
   margin: 0px;
   padding: 0px;
-}
+} */
 
 .dashboard-stat{
   border-top: 8px solid #21A0A0;
