Added styles to the rest of the log portal elements

--- a/src/index.css
+++ b/src/index.css
@@ -131,6 +131,8 @@ label{
   text-decoration: none;
 }
 
+
+/* PORTAL STYLES */
 .btn-warning{
   background-color: #FFE900;
   border-color: #FFE900;
